# vaked-base

./: .DEV.TODO  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DYAD_SHELL.md  FLASH.md  GOALS.md  HONEST_BEGINNINGS.md  LICENSE  MIGRATION_LOG.md  ONESHOT.md  ONESHOT_CLAUDE.md  PR_103_KICKSTART.md  README.md  REVIEW_MAP.md  REVIEW_PLAN.md  ROADMAP_2026-2027.md  SECURITY.md  THANKS.md  Taskfile.yml  VAKED_AGENTS.md  _operator_todo.md  blocks_adapter.go  cloudbuild.yaml  crabcc-cleanup-dirs.sh  e2e.ts  fix_indent.py  flake-cx53.nix  flake.nix  generate_images.py  genesis_block_00.md  genesis_reflection.md  genesis_snapshot.md  hooks_agent.go  index.html  (+12 more)
.claude/: settings.json
.codewhale/: commit_msg_353.txt  commit_msg_ci.txt  commit_msg_zig2.txt  commit_msg_zig3.txt  pr_comment_353.md
.dev/: README.md  bootstrap.sh  whale-config.json
.githooks/: pre-commit
.github/: CODEOWNERS  SECRETS.md  labels.yml
.vaked/: graph.db  graph.json  mesh-policy.vaked  runtime_policy.zig  subagent-mesh-policy.yaml
.whale/: config  config.toml  mcp.json
agent_guardd/: __init__.py  __main__.py  bpf.py  enforce.py  evidence.py  policy.py  verify.py
agent_memoryd/: __init__.py  __main__.py  capability.py  daemon.py  eventd.py  store.py
agent_sandboxd/: __init__.py  __main__.py  cgroup.py  daemon.py  eventd.py  namespace.py  policy.py
agui/: shader.go  theme.go  theme_test.go
ailish/: Cargo.toml  DEVIATIONS.md  README.md
ailish/src/: ast.rs  fmt.rs  guardrail.rs  lib.rs  parser.rs
ailish/tests/: fmt.rs  guardrail.rs  parse.rs
blog/: index.md  vaked-blog-series.md
chat-gateway/: flake.nix
daemons/: README.md
deploy/: deploy.sh
docs/: QUICKSTART.md  SWE_AF_SMOKE.md  arp-log.md  arp-log.meta-hook.md  economy.md  headless-m3-setup.md  library.md  m3-manifest.md  state-of-the-state.md  strange-loops-and-self-reference.md  ultrawhale-README.md  whale-ultra-bench.html  whale-ultra-bench.md
engram/: workflow.json
eventd/: __init__.py  __main__.py  core.py  log.py  runtime.py  statedep.py
examples/: swarm.vaked
gateway/: gw.py  gw.zig  gw_v3.zig
genesisd/: __init__.py  __main__.py  bootstrap.py  server.py
gocc/: GOCC.md  build.zig  build.zig.zon  flake.nix  gocc.json
hugo-site/: hugo.toml
ide/vaked-ide/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ide/vaked-ide/src-tauri/capabilities/: default.json
ide/vaked-ide/src-tauri/src/: error.rs  lib.rs  main.rs
ide/vaked-ide/src-tauri/src/commands/: graph.rs  lsp.rs  mod.rs  session.rs  surface.rs  terminal.rs
ide/vaked-ide/src-tauri/src/lsp/: client.rs
ide/vaked-ide/src-tauri/src/session/: a2a.rs  gateway.rs  human.rs  mod.rs
ide/vaked-ide/src-tauri/src/terminal/: ffi.rs  macos.rs  mod.rs  runtime.rs
meta-ralphd/: __init__.py  __main__.py  ebpf.py  l1_syscall_guard.c  monitor.py  watchdog.py
native/: gh.go  git.go  grep.go
nix/: docs-check.nix  meta-ralphd.nix  synapsed.nix  vaked-cli.nix  vaked-genesis.nix  vaked-mlir.nix  vaked-telebot.nix
notes/: 2026-06-17.md
paper/: README.md  bibliography.bib  metadata.json  paper.tex
prompts/: antigravity-oneshot.md  architecture-guardrail.txt  atomic-migration.txt  carcerd-defense-sandbox-sprint.md  ci-agent-briefing.md  dedicated-language-session.md  deterministic-rag.txt  fix-all-issues.arp.md  vaked-v0.6-operational-baseline.txt  vaked-v0.7-intelligence-l3.txt
protocol/: README.md
provenance/: 2026-06-18-dyad-session.vaked
repomap/: cache.go  doc.go  graph.go  panel.go  plugin.go  regex.go  shared.go  simd.go
scripts/: benchmark-100k-scalability.py  docs-validator.sh  (+8 more)
tools/ralph/: PURPOSE.md  README.md  introspect_purpose.md  introspectcore.py  pyproject.toml  ralph.py  ralphcore.py  repos.json  test_introspect.py  test_ralph.py  tracks.json  tracks.local.json  vastai.py
tools/ralph/state/: events.jsonl
vaked-agents/ci/label-tagger/: Cargo.toml  deny.toml
vaked-agents/ci/label-tagger/src/: agent.rs  config.rs  consts.rs  github.rs  goals.rs  guardrails.rs  main.rs  output.rs  parse.rs  prompts.rs  run.rs  telemetry.rs
vaked-agents/ci/pr-review/: Cargo.toml  README.md  build.rs  deny.toml
vaked-agents/ci/pr-review/.cargo/: config.toml
vaked-agents/ci/pr-review/evals/: README.md  py_bare_except.diff  rust_unwrap.diff
vaked-agents/ci/pr-review/src/: agent.rs  autofix.rs  cleanup.rs  config.rs  consts.rs  diff.rs  eval.rs  github.rs  guardrails.rs  main.rs  prompts.rs  provenance.rs  render.rs  respond.rs  review.rs  telemetry.rs
vaked-agents/ci/pr-review/tests/: live_openrouter.rs
vaked-agents/ci/provost/: Cargo.toml  README.md  deny.toml
vaked-agents/ci/provost/src/: agent.rs  config.rs  consts.rs  github.rs  guardrails.rs  main.rs  output.rs  parse.rs  prompts.rs  ralph.rs  run.rs  scan.rs  telemetry.rs
vaked-agents/ci/swe-af/: Cargo.toml  README.md  deny.toml
vaked-agents/ci/swe-af-orchestrator/: Cargo.toml  build.rs
vaked-agents/ci/swe-af-orchestrator/deploy/: README.md  swe-af-orchestrator.env.example  swe-af-orchestrator.service  swe-af.slice
vaked-agents/ci/swe-af-orchestrator/src/: config.rs  disk.rs  eventd.rs  lib.rs  lifecycle.rs  nats.rs  status.rs  task.rs
vaked-agents/ci/swe-af/src/: guardrails.rs  main.rs
vaked-agents/ci/telemetry/: Cargo.toml
vaked-agents/ci/telemetry/src/: lib.rs
vaked-mlir/: CMakeLists.txt  README.md
vaked-mlir/include/hcp/: HcpDialect.h  HcpDialect.td  HcpOps.td  HcpTypes.td
vaked-mlir/include/vaked/: VakedDialect.h  VakedDialect.td  VakedOps.td  VakedPasses.h  VakedPasses.td  VakedTypes.td
vaked-mlir/lib/: EventdIntegration.cpp  HcpDialect.cpp  LlvmLowering.cpp  Pass1TopologyAnalysis.cpp  Pass2WalInjection.cpp  Pass2WalInjectionFull.cpp  Pass3AotIndex.cpp  VakedDialect.cpp  VakedErrorHandling.cpp  VakedOps.cpp  VakedTypes.cpp
vaked-mlir/test/: integration-e2e.mlir  roundtrip-validation.py  test-suite.sh
vaked-mlir/tools/: vaked-opt.cpp
vakedc/mlir/: CMakeLists.txt  HcpDialect.cpp  HcpDialect.h  HcpDialect.td  README.md  VakedDialect.cpp  VakedDialect.h  VakedDialect.td  run_tests.sh
(+1550 files in other folders)
