[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vakedc"
version = "0.1.0"
description = "Vaked front-end: parse / check / lower .vaked capability-graph sources"
requires-python = ">=3.11"
# Stdlib-only by design - no runtime dependencies.

[project.scripts]
vakedc = "vakedc.__main__:main"

# Only the front-end package is installable here; `vaked/` (grammar, schema,
# examples) is data resolved relative to the source tree, which is why this is
# meant to be installed EDITABLE (pip -e / pipx --editable). A non-editable
# install would break vakedc's default `vaked/schema/builtins.vaked` lookup.
[tool.setuptools]
packages = ["vakedc"]
