[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false
# Monorepo — not a distributable package. CI editable install only for testing.
include = ["vakedc*", "tests*"]

[project]
name = "vaked-base"
version = "0.5.0"
description = "Capability-graph language and deterministic runtime for autonomous agent swarms"
requires-python = ">=3.12"
readme = "README.md"

[project.optional-dependencies]
dev = []

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# All tools use stdlib only. No external dependencies.
# uv is used for:
#   1. Python version management (uv python install 3.12)
#   2. Fast venv creation (uv venv)
#   3. Script running (uv run tools/vaked-cli status)
#   4. Future dependency management when needed

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
