[package]
name = "ailish"
version = "0.1.0"
edition = "2021"
description = "AI-lish V1: a nom-based parser, register-monad guardrail, and idempotent formatter for the agent execution-graph protocol"
license = "MIT"

[dependencies]
nom = "7"

[lib]
name = "ailish"
path = "src/lib.rs"

[[bin]]
name = "ailishfmt"
path = "src/bin/ailishfmt.rs"

[[bin]]
name = "ailish-tokenbench"
path = "src/bin/tokenbench.rs"
