[package]
name = "vaked-label-tagger"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Vaked autonomous triage agent (adk-rust + OpenRouter): labels PRs/issues, syncs milestones, generates changelogs"

# Standalone crate — do not join a parent Cargo workspace (there is none at repo root).
[workspace]

[dependencies]
# adk-rust agent stack. default-features off to keep the binary lean (no Gemini).
adk-rust = { version = "1.0.0", default-features = false, features = [
    "agents",
    "models",
    "runner",
    "sessions",
    "openrouter",
    "mcp",
] }
adk-core = { version = "1.0.0", features = ["rustls"] }
adk-model = { version = "1.0.0", features = ["openrouter"] }
# Guardrails feature (input: secret-redaction + injection-defense).
adk-agent = { version = "1.0.0", default-features = false, features = ["guardrails"] }
adk-runner = { version = "1.0.0", default-features = false, features = ["context-compaction"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mimalloc = { version = "0.1", default-features = false }

# Tracing → self-hosted Langfuse, via the shared vaked-telemetry crate (single
# source of truth for the OTLP exporter + LANGFUSE_* env resolution).
vaked-telemetry = { path = "../telemetry" }
tracing = "0.1"
# SdkTracerProvider is the `setup_tracing` return type (flushed via `.shutdown()`).
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
