[package]
name = "vaked-pr-review"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Vaked CI PR-review agent (adk-rust + OpenRouter, crabcc-indexed, Langfuse-traced)"

# Standalone crate — do not join a parent Cargo workspace (there is none at repo root).
[workspace]

[dependencies]
# adk-rust agent stack. default-features off to drop the Gemini provider we don't
# use; adk-core uses rustls (no system OpenSSL).
adk-rust = { version = "1.0.0", default-features = false, features = [
    "agents",
    "models",
    "runner",
    "sessions",
    "openrouter",
    "mcp",
    "eval",      # adk eval framework (the --eval harness)
    "personas",  # persona-based eval scoring
] }
adk-core = { version = "1.0.0", features = ["rustls"] }
adk-model = { version = "1.0.0", features = ["openrouter"] }
# Direct deps purely to flip feature flags adk-rust doesn't re-expose (cargo unifies
# them onto the same crate instances adk-rust pulls):
#   adk-agent/guardrails  → LlmAgentBuilder::{input,output}_guardrails attach point
#   adk-runner/context-compaction → Runner::builder().context_compaction(..)
adk-agent = { version = "1.0.0", default-features = false, features = ["guardrails"] }
adk-runner = { version = "1.0.0", default-features = false, features = ["context-compaction"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1" # JSON schema for the read_lines tool parameters
mimalloc = { version = "0.1", default-features = false } # faster global allocator

# crabcc symbol index, spoken to over MCP (stdio child process: `crabcc --mcp`).
# Same rmcp line adk-tool uses, so the client types unify.
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }

# Tracing → self-hosted Langfuse, via the shared vaked-telemetry crate (single
# source of truth for the OTLP exporter, blocking-client config + LANGFUSE_* env
# resolution). Pinned to adk's OTel 0.31 line so the global tracer provider
# unifies with adk-rust's internal `tracing` spans.
vaked-telemetry = { path = "../telemetry" }
# Shared advisory-comment footer (single source of truth for the `<sub>` line).
vaked-agents-shared = { path = "../shared" }
tracing = "0.1"
# opentelemetry/_sdk + tracing-opentelemetry stay: the trace-link helpers below
# read the active span's context, and SdkTracerProvider is the return type.
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }

# Faster startup + smaller baked binary (compile cost lands on the baker, which
# we don't wait on).
#
# panic = "unwind" (NOT "abort"): the OTLP/HTTP batch span processor exports on a
# dedicated background thread that has no Tokio reactor, so its async reqwest
# client panics ("there is no reactor running") on a scheduled flush during a
# slow review. Under panic=abort that background-thread panic SIGABRTs the whole
# process (exit 134) AFTER the review already ran — failing the `review` check on
# every slow PR. With unwind, the panic unwinds that one thread; the review still
# posts and the process exits 0. (Root-cause follow-up: give the OTLP exporter a
# blocking HTTP client so the batch thread never needs a reactor.)
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

