[package]
name = "vaked-swe-af-orchestrator"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Fan-out batch orchestrator: drains a NATS JetStream work-queue and runs vaked-swe-af per task."

[[bin]]
name = "swe-af-orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "swe-af-enqueue"
path = "src/bin/enqueue.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "fs", "sync", "time"] }
async-nats = "0.38"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
