[package]
name = "vaked-swe-af"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false
description = "Vaked swe_af agent (adk-rust + OpenRouter): the plan + code nodes of the lowered `workflow swe_af`, triggered by labeling an issue `agent`"

# Standalone crate — do not join a parent Cargo workspace (there is none at repo root).
[workspace]

[dependencies]
# adk-rust agent stack. default-features off to keep the binary lean (no Gemini).
adk-rust = { version = "1.0.0", default-features = false, features = [
    "agents",
    "models",
    "runner",
    "sessions",
    "openrouter",
    "mcp",
] }
adk-core = { version = "1.0.0", features = ["rustls"] }
adk-model = { version = "1.0.0", features = ["openrouter"] }
# Guardrails feature (input: secret-redaction + injection-defense).
adk-agent = { version = "1.0.0", default-features = false, features = ["guardrails"] }
adk-runner = { version = "1.0.0", default-features = false, features = ["context-compaction"] }

tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1" # JSON schema for tool parameters (so models can emit tool calls)
# crabcc symbol index, spoken to over MCP (stdio child process: `crabcc --mcp`) — the
# primary exploration surface. Same rmcp line adk-tool uses so the client types unify.
rmcp = { version = "1.7", features = ["client", "transport-child-process"] }
mimalloc = { version = "0.1", default-features = false }

# Tracing → self-hosted Langfuse, via the shared vaked-telemetry crate (single
# source of truth for Langfuse env resolution across the fleet).
tracing = "0.1"
vaked-telemetry = { path = "../telemetry" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
